Related fdo#77813: $(workdirurl) was always empty

Regression introduced with cb021fcafba06ccf973f2abe229a4761c0a002de "fdo#46037:
remove 1 comphelper/configurationhelper in framework."

Change-Id: I07727d93315e0d3d87004ce71708271e90a173a3
(cherry picked from commit 3c6da8e49a96513eda73656f3f6212f980a74b51)
Reviewed-on: https://gerrit.libreoffice.org/11591
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>